--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jQuery-QueryBuilder",
+  "name": "jquery-querybuilder",
   "version": "2.3.2",
   "author": {
     "name": "Damien \"Mistic\" Sorel",
